# allegro-motor-drivers

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
allegro-motor-derive/src/: lib.rs
derive/: Cargo.toml
derive/src/: chips.rs  lib.rs
derive/tests/: tests.rs
drivers/: Cargo.toml
drivers/src/: error.rs  io.rs  lib.rs  regs.rs
drivers/src/a4910/: driver.rs  io.rs  mod.rs
drivers/src/a4910/regs/: config.rs  diagnostic.rs  mask.rs  mod.rs  run.rs
drivers/src/a4962/: driver.rs  io.rs  mod.rs
drivers/src/a4962/regs/: config.rs  mod.rs  run.rs
drivers/src/a4963/: driver.rs  io.rs  mod.rs
drivers/src/a4963/regs/: config.rs  diagnostic.rs  mask.rs  mod.rs
drivers/src/a4964/: diagnostics.rs  driver.rs  io.rs  mod.rs  readback.rs
drivers/src/a4964/regs/: bemf.rs  bridge.rs  commutation.rs  current_limit.rs  diagnostic.rs  gate_drive.rs  mask.rs  mod.rs  motor_function.rs  nvm_write.rs  phase_advance.rs  pwm.rs  read_only.rs  readback.rs  speed_loop.rs  startup.rs  system.rs  vds_monitor.rs  watchdog.rs  write_only.rs
drivers/src/a496x/: driver.rs  io.rs  mod.rs
drivers/src/a496x/regs/: config.rs  diagnostic.rs  mask.rs  mod.rs  run.rs
drivers/src/a49xx/: mod.rs
drivers/src/a49xx/a4910/: mod.rs  regs.rs
drivers/src/a49xx/a4910/regs/: config.rs  diagnostic.rs  mask.rs  mod.rs
drivers/src/a49xx/a4962/: mod.rs
drivers/src/a49xx/a4962/regs/: config.rs  mask.rs  mod.rs  run.rs
drivers/src/amt49xxx/: mod.rs
drivers/src/io/: spi.rs
drivers/tests/: tests.rs
