[package]
name = "allegro-motor-derive"
version = "0.1.0"
authors = ["John Little"]
edition = "2021"
rust-version = "1.65.0"
description = "Derive macros for Allegro motor driver registers"
documentation = "https://docs.rs/allegro-motor-derive"
repository = "https://github.com/johngigantic/allegro-motor-drivers"
license = "MIT"
keywords = ["no-std", "embedded", "derive", "hardware"]
categories = ["no-std", "embedded", "hardware-support", "science::robotics"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.38"

[dev-dependencies]
bilge = "0.2.0"
