[package]
name = "allegro-motor-drivers"
version = "0.1.0"
authors = ["John Little"]
edition = "2021"
# rust-version = ""
description = "Allegro microsystems motor controller driver registers"
# documentation = "https://docs.rs/allegro-motor-drivers"
readme = "../README.md"
# homepage = ""
repository = "https://github.com/johngigantic/allegro-motor-drivers"
license = "MIT"
keywords = ["no-std", "embedded", "hardware"]
categories = ["no-std", "embedded", "hardware-support", "science::robotics"]
# workspace = ".."
# include = [""]
# publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
