[package]
name = "allegro-motor-drivers"
version = "0.1.0"
authors = ["John Little"]
edition = "2021"
rust-version = "1.65.0"
description = "Allegro microsystems motor controller driver registers"
# documentation = "https://docs.rs/allegro-motor-drivers"
readme = "../README.md"
# homepage = ""
repository = "https://github.com/johngigantic/allegro-motor-drivers"
license = "MIT"
keywords = ["no-std", "embedded", "hardware"]
categories = ["no-std", "embedded", "hardware-support", "science::robotics"]
# workspace = ".."
# include = [""]
# publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bilge = "0.2.0"

# TODO: remove proc-macro-error from dependencies.
# proc-macro-error is not a direct dependency of this crate, but a dependency of bilge.
# It has a bug in v1.0.0, but bilge permissively allows v1.0.0 as the minimum dependency.
# The statement here is to restrict proc-macro-error to v1.0.4 at minimum.
proc-macro-error = "1.0.4"
